phase9-gitops-platform/environments/dev-ocp/ocp-values/routes/argocd-route-edge.yaml
# ArgoCD UI — edge TLS (lab OCP, server.insecure=true)
# Dùng sau: oc patch configmap argocd-cmd-params-cm ... server.insecure=true
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    banking-demo/environment: dev-ocp
spec:
  host: argocd-server-argocd.apps.ocp01.npd.co
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
