phase9-gitops-platform/environments/dev-ocp/ocp-values/routes/argocd-route-reencrypt.yaml
# ArgoCD UI — reencrypt (HTTPS backend, không cần server.insecure)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    banking-demo/environment: dev-ocp
spec:
  host: argocd-server-argocd.apps.ocp01.npd.co
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
