phase9-gitops-platform/environments/dev-ocp/ocp-values/routes/banking-route-ws.yaml
# Banking WebSocket — npd-banking.co/ws (cùng ns npd-banking với / và /api)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: npd-banking-ws
  namespace: npd-banking
  labels:
    app.kubernetes.io/name: banking-demo
    app.kubernetes.io/component: websocket
    banking-demo/environment: dev-ocp
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    haproxy.router.openshift.io/timeout: 3600s
spec:
  host: npd-banking.co
  path: /ws
  to:
    kind: Service
    name: kong-proxy-route
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
